work done on 1-4-2025

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -30,7 +30,7 @@
                             <ul class="nav">
                                 <li class="nav-item"><a class="nav-link header-link" th:href="@{/home}">Home</a></li>
                                 <li class="nav-item"><a class="nav-link header-link" th:href="@{/medicine}">Medicine</a></li>
-                                <li class="nav-item"><a class="nav-link header-link" th:href="@{/medical-instruments}">Medical instruments</a></li>
+                                <li class="nav-item"><a class="nav-link header-link" th:href="@{/medical}">Medical instruments</a></li>
                                 <li class="nav-item"><a class="nav-link header-link" th:href="@{/about}">Who are we?</a></li>
                                 <li class="nav-item"><a class="nav-link header-link" th:href="@{/sign-up}">Sign Up</a></li>
                             </ul>
