--- a/src/main/resources/templates/medical.html
+++ b/src/main/resources/templates/medical.html
@@ -23,18 +23,30 @@
         
         <!-- Medical cards -->
         <div class="row">
-            <div class="col-md-4" th:each="medical : ${medicals}">
-                <div class="card mb-4">
-                    <!-- The medical image -->
-                    <img class="card-img-top" src="@{${medical.imagePath}}" alt="medical instrument image">
-                    <div class="card-body">
-                        <!-- The medical info -->
-                        <h5 class="card-title" th:text="${medical.name}"></h5>
-                        <p class="card-text" th:text="${medical.description}"></p>
-                        <p class="card-text"><small class="text-muted" th:text="${medical.member.username}"></small></p>
+            <div th:if="${medicals} != null" class="col-md-4">
+                <div class="col-md-4" th:each="medical : ${medicals}">
+                    <div class="card mb-4">
+                        <!-- The medical image -->
+                        <img class="card-img-top" src="@{${medical.imagePath}}" alt="medical instrument image">
+                        <div class="card-body">
+                            <!-- The medical info -->
+                            <h5 class="card-title" th:text="${medical.name}"></h5>
+                            <p class="card-text" th:text="${medical.description}"></p>
+                            <p class="card-text"><small class="text-muted" th:text="${medical.member.username}"></small></p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div th:if="${medicals} == null" class="col-md-4">
+                <div class="card mb-4">
+                    <img src="/assets/default_medical.jpeg" alt="default medical" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Default Medical Instrument</h5>
+                        <p class="card-text">No medical instruments found.</p>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
