finishing up the profile page

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -47,7 +47,7 @@
                         <p>
                             You are a <span th:text="${user.volunteer}"></span>
                         </p>
-                        <a th:href="@{/new-request}">new request</a>
+                        <a th:href="@{/donation}">request to add new donation</a>
                     </div>
 
                     <div> <!-- this should be in the left side-->
@@ -77,7 +77,7 @@
                         <p>
                             You are a <span> here if the user is regular member or a volunteer</span>
                         </p>
-                        <a th:href="@{/new-request}">new request</a>
+                        <a th:href="@{/donation}">new request</a>
                     </div>
 
                     <div> <!-- this should be in the left side-->
