finishing up the my request page

--- a/src/main/resources/templates/medicine.html
+++ b/src/main/resources/templates/medicine.html
@@ -15,7 +15,7 @@
     <div class="container mt-4">
         <!-- Search button -->
         <div class="mb-4">
-            <form th:action="@{/medicines/search}" method="get" class="form-inline">
+            <form th:action="@{medicine/medicines/search}" method="get" class="form-inline">
                 <input type="text" name="name" class="form-control mr-2" placeholder="Enter medicine name" required />
                 <button type="submit" class="btn btn-primary">Search</button>
             </form>
