work on 5/5/2025: request validation page

--- a/src/main/resources/templates/my_request.html
+++ b/src/main/resources/templates/my_request.html
@@ -26,7 +26,7 @@
                     <a href="/mymedical">Medical Instrument</a>
                 </div>
                  
-                <!-- in the midle and left, cards of the items we have, normally all medicines and medicals -->
+                <!-- in the middle and left, cards of the items we have, normally all medicines and medicals -->
                 <div>
                     <!-- see first if it comes from the search button -->
                      <div th:if="${med} != null">
